# pipe

./: .env  Cargo.toml
src/: cookie.rs  main.rs  schema.rs  server.rs  sql_helper.rs
src/db/: mod.rs  token.rs  user.rs  uuid.rs
src/device/: command.rs  index.rs  mod.rs  token.rs
src/user/: login.rs
static/device/: index.html  index.js
static/device/command/: index.html
static/user/login/: index.html  login.js
