[package]
name = "pipe"
version = "0.1.0"
authors = ["Spxg <itsme@spxg.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
mysql = "17.0.0"
protocol = { version = "0.1", path = "../protocol" }
actix-web = "2.0"
actix-rt = "1.1"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0"