[package]
name = "pipe"
version = "0.1.0"
authors = ["Spxg <itsme@spxg.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
protocol = { version = "0.1", path = "../protocol" }
serde = { version = "1.0.111", features = ["derive"] }
rocket_contrib = { version = "0.4.5", features = ["json"] }
serde_json = "1.0"
rocket = "0.4.5"
mysql = "17.0.0"