[package]
name = "pipe"
version = "0.1.0"
authors = ["Spxg <itsme@spxg.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
protocol = { version = "0.1", path = "../protocol" }
rocket_contrib = { version = "0.4.5", features = ["json", "diesel_mysql_pool"] }
rocket = "0.4.5"
mysql = "17.0.0"
time = "0.1.43"
diesel = "1.4.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"